<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".presentation.settings.SettingsFragment">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/settingsTitleLabel"
            style="@style/SettingsTitleTextStyle"
            android:layout_marginStart="32dp"
            android:layout_marginTop="@dimen/_35sdp"
            android:layout_marginEnd="32dp"
            android:text="@string/settings_title"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/locationPermissionSwitch"
            style="@style/SwitchStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/location_permissions_label"
            android:textColor="@color/text_color"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintEnd_toEndOf="@+id/settingsTitleLabel"
            app:layout_constraintStart_toStartOf="@+id/settingsTitleLabel"
            app:layout_constraintTop_toBottomOf="@+id/settingsTitleLabel" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/removelocation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:fontFamily="@font/helvetica_neue_medium"
            android:text="@string/clear_database"
            android:textColor="@color/text_color"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/locationPermissionSwitch" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/help"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:fontFamily="@font/helvetica_neue_medium"
            android:text="Help"
            android:textColor="@color/text_color"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/removelocation" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/aboutTitleLabel"
            style="@style/SettingsTitleTextStyle"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:text="@string/about_title"
            android:textColor="@color/colorBlack"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/help" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/aboutTextContent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="32dp"
            android:fontFamily="@font/helvetica_neue_medium"
            android:text="@string/about_text_content"
            android:textColor="@color/text_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/aboutTitleLabel" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
