<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".presentation.weather.WeatherFragment">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/locationText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_20sdp"
            android:drawableStart="@drawable/ic_location_on"
            android:drawablePadding="5dp"
            android:fontFamily="@font/helvetica_neu_bold"
            android:gravity="center"
            android:text="@string/current_weather"
            android:textColor="@color/colorBlack"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Today Weather" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/dateTimeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:fontFamily="@font/helvetica_neue_medium"
            android:textColor="@color/text_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/locationText"
            tools:text="Sun 08 March 2019" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/weatherCardLayout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_150sdp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/weather_card_background"
            android:elevation="6dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dateTimeText">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/temperatureText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/helvetica_neue_medium"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/_70sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="20º" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/weatherIndicatorImage"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="24dp"
                android:src="@drawable/ic_cloud_queue_dark"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/realFeelLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:fontFamily="@font/helvetica_neue_medium"
                android:text="@string/today"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/_12sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/temperatureText" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/realFeelText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:fontFamily="@font/helvetica_neue_medium"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/_12sdp"
                app:layout_constraintStart_toEndOf="@+id/realFeelLabel"
                app:layout_constraintTop_toTopOf="@+id/realFeelLabel"
                tools:text="18" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/weatherDescriptionText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/helvetica_neue_medium"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/_12sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/weatherIndicatorImage"
                app:layout_constraintTop_toBottomOf="@+id/weatherIndicatorImage"
                tools:text="Overcast" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/humidityText"
            style="@style/WeatherInfoTextStyle"
            android:layout_marginEnd="32dp"
            android:fontFamily="@font/helvetica_neu_bold"
            android:textColor="@color/text_color"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintBottom_toBottomOf="@+id/humidityLabel"
            app:layout_constraintEnd_toEndOf="@+id/weatherCardLayout"
            app:layout_constraintTop_toTopOf="@+id/humidityLabel"
            tools:text="65%" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/humidityLabel"
            style="@style/WeatherLabelTextStyle"
            android:layout_marginStart="32dp"
            android:layout_marginTop="54dp"
            android:fontFamily="@font/helvetica_neue_medium"
            android:text="@string/humidity_label"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintStart_toStartOf="@+id/weatherCardLayout"
            app:layout_constraintTop_toBottomOf="@+id/weatherCardLayout" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/windSpeedLabel"
            style="@style/WeatherLabelTextStyle"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/helvetica_neue_medium"
            android:text="@string/wind_speed_label"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintStart_toStartOf="@+id/humidityLabel"
            app:layout_constraintTop_toBottomOf="@+id/windDirectionLabel" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/windSpeedText"
            style="@style/WeatherInfoTextStyle"
            android:fontFamily="@font/helvetica_neu_bold"
            android:textColor="@color/text_color"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintBottom_toBottomOf="@+id/windSpeedLabel"
            app:layout_constraintEnd_toEndOf="@+id/humidityText"
            app:layout_constraintTop_toTopOf="@+id/windSpeedLabel"
            tools:text="5.69 km/h" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/pressureLabel"
            style="@style/WeatherLabelTextStyle"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/helvetica_neue_medium"
            android:text="@string/pressure_label"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintStart_toStartOf="@+id/humidityLabel"
            app:layout_constraintTop_toBottomOf="@+id/humidityLabel" />

        <TextView
            android:id="@+id/pressureText"
            style="@style/WeatherInfoTextStyle"
            android:fontFamily="@font/helvetica_neu_bold"
            android:textColor="@color/text_color"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintBottom_toBottomOf="@+id/pressureLabel"
            app:layout_constraintEnd_toEndOf="@+id/humidityText"
            app:layout_constraintTop_toTopOf="@+id/pressureLabel"
            tools:text="1023 mb" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imageView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="64dp"
            android:src="@drawable/ic_undraw_season_change"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dateTimeText" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/windDirectionLabel"
            style="@style/WeatherLabelTextStyle"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/helvetica_neue_medium"
            android:text="@string/wind_direction_label"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/_12sdp"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="@+id/humidityLabel"
            app:layout_constraintTop_toBottomOf="@+id/pressureLabel" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/windDirectionText"
            style="@style/WeatherInfoTextStyle"
            android:fontFamily="@font/helvetica_neu_bold"
            android:textColor="@color/text_color"
            android:textSize="@dimen/_12sdp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/windDirectionLabel"
            app:layout_constraintEnd_toEndOf="@+id/humidityText"
            app:layout_constraintTop_toTopOf="@+id/windDirectionLabel"
            tools:text="N" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/sensibleLabel"
            style="@style/WeatherLabelTextStyle"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/helvetica_neue_medium"
            android:text="@string/sensible"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintStart_toStartOf="@+id/humidityLabel"
            app:layout_constraintTop_toBottomOf="@+id/windSpeedLabel" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/sensibleText"
            style="@style/WeatherInfoTextStyle"
            android:fontFamily="@font/helvetica_neu_bold"
            android:textColor="@color/text_color"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintBottom_toBottomOf="@+id/visibilityLabel"
            app:layout_constraintEnd_toEndOf="@+id/humidityText"
            app:layout_constraintTop_toTopOf="@+id/sensibleLabel"
            tools:text="0 km" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
